# parkour_lite3_deploy

./: .gitignore  CMakeLists.txt  README.md  note.txt
depth_sensor/: depth_sensor.cpp  depth_sensor.h
interface/robot/hardware/: lite3_hardware_interface.hpp  x30_hardware_interface.hpp
interface/robot/simulation/: raisim_interface.hpp
interface/user_command/: keyboard_interface.hpp  retroid_gamepad_interface.hpp
nx/: depth_encoder.py
run_policy/: CMakeLists.txt  jueying_policy_runner.cpp  policy_runner.hpp
state_machine/: idle_state.hpp  rl_control_state.cpp  rl_control_state.h  standup_state.hpp  state_machine.hpp
state_machine/parameters/: control_parameters.h  lite3_control_parameters.cpp  p50_control_parameters.cpp  x30_control_parameters.cpp
state_machine/policy/: backward_student.pt  forward_student.pt  lite3_common.pt  parkour.pt  policy_est_p50_v2.0.3.pt  policy_waq_with_act_net_v1.3.pt  stand_student.pt  x30_common.pt
types/: custom_types.h
